--- a/app/src/main/res/layout/activity_project_detail_signup.xml
+++ b/app/src/main/res/layout/activity_project_detail_signup.xml
@@ -210,7 +210,8 @@
                 android:layout_marginTop="10dp"
                 android:text="Xác nhận tài trợ"
                 android:textSize="18sp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/ButtonStyle"/>
 
         </LinearLayout>
 
