--- a/app/src/main/res/layout/activity_redpoint_check_detail.xml
+++ b/app/src/main/res/layout/activity_redpoint_check_detail.xml
@@ -149,16 +149,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Xác nhận điểm nóng"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                style="@style/ButtonStyle"/>
 
             <Button
                 android:id="@+id/btn_edit_thongtin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="@dimen/margin_large"
                 android:text="Sửa thông tin"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                style="@style/ButtonStyle"/>
         </LinearLayout>
 
     </LinearLayout>
