--- a/app/src/main/res/layout/activity_edit_red_point.xml
+++ b/app/src/main/res/layout/activity_edit_red_point.xml
@@ -6,7 +6,9 @@
     tools:context="com.example.vuduc.apptuthien.EditRedPointActivity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:paddingLeft="@dimen/margin_small"
+    android:paddingRight="@dimen/margin_small">
 
     <LinearLayout
         android:id="@+id/activity_create_project"
@@ -48,18 +50,15 @@
                 android:textSize="@dimen/txt_large"
                 android:textStyle="bold"/>
 
-            <ScrollView
+            <EditText
+                android:id="@+id/editProjectContent"
                 android:layout_width="match_parent"
-                android:layout_height="150dp">
-
-                <EditText
-                    android:id="@+id/editProjectContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nhập nội dung"
-                    android:inputType="textMultiLine"
-                    android:ems="10"/>
-            </ScrollView>
+                android:layout_height="150dp"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:background="@drawable/bg_black_white_tv"
+                android:hint="Nhập nội dung dự án"
+                android:gravity="top"
+                android:inputType="textMultiLine"/>
 
         </LinearLayout>
 
@@ -165,12 +164,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Thêm"/>
+                android:text="Thêm"
+                android:layout_marginTop="@dimen/margin_medium"
+                style="@style/ButtonStyle"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_redpoint_listLocation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium">
 
             </android.support.v7.widget.RecyclerView>
         </LinearLayout>
@@ -208,13 +210,17 @@
                 android:id="@+id/btnLuu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lưu"/>
+                android:text="Lưu"
+                style="@style/ButtonStyle"
+                android:layout_marginRight="@dimen/margin_medium"/>
 
             <Button
                 android:id="@+id/Huy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hủy"/>
+                android:text="Hủy"
+                style="@style/ButtonStyle"
+                android:layout_marginLeft="@dimen/margin_medium"/>
         </LinearLayout>
 
     </LinearLayout>
