--- a/app/src/main/res/layout/activity_list_project_me.xml
+++ b/app/src/main/res/layout/activity_list_project_me.xml
@@ -7,7 +7,8 @@
     android:id="@+id/activity_list_project"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vuduc.apptuthien.ListProjectMeActivity">
+    tools:context="com.example.vuduc.apptuthien.ListProjectMeActivity"
+    android:padding="@dimen/margin_small">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvListProject"
@@ -28,8 +29,8 @@
         fab:fab_label="@string/fab_create_project"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginRight="@dimen/margin_medium"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginLeft="@dimen/margin_medium"/>
 
 </RelativeLayout>
