--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,8 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
         android:padding="12dp"
-        android:text="Đăng nhập"/>
+        android:text="Đăng nhập"
+        style="@style/ButtonStyle"/>
 
     <TextView android:id="@+id/txtLink_signup"
         android:layout_width="match_parent"
