--- a/app/src/main/res/layout/activity_project_detail_me.xml
+++ b/app/src/main/res/layout/activity_project_detail_me.xml
@@ -276,23 +276,27 @@
                 android:layout_marginTop="10dp"
                 android:text="Mời tài trợ"
                 android:textSize="18sp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/ButtonStyle"/>
 
             <Button
                 android:id="@+id/btn_xemtt_taitro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Xem thông tin tài trợ"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:text="Thông tin tài trợ"
                 android:textSize="18sp"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                style="@style/ButtonStyle"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <Button
                 android:id="@+id/btn_edit_thongtin"
@@ -300,15 +304,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Sửa thông tin"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
 
             <Button
                 android:id="@+id/btn_drop_thongtin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_marginLeft="@dimen/margin_small"
                 android:text="Kết thúc dự án"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                style="@style/ButtonStyle"
+                android:layout_weight="1"/>
         </LinearLayout>
 
     </LinearLayout>
