--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -54,19 +54,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Đơn vị tổ chức:"
+            android:layout_weight="2"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/txt_link_user_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="right"
             android:layout_marginLeft="15sp"
             android:layout_marginTop="10dp"
             android:text="Hội từ thiện TLU"
@@ -75,12 +79,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Thời gian:"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -97,12 +103,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Địa điểm:"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -112,19 +120,21 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15sp"
             android:layout_marginTop="10dp"
-            android:text="Trái đất"
+            android:text="Đông Ngạc - Từ Liêm - Hà Nội"
             android:textSize="18sp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Kinh phí dự kiến:"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -141,12 +151,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Kinh phí\nđược tài trợ"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -168,6 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
+                android:layout_gravity="right"
                 android:layout_marginTop="10dp"
                 android:text="Link sao kê"
                 android:textSize="18sp"/>
@@ -198,12 +211,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="0">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Tình trạng dự án:"
             android:textSize="18sp"
             android:textStyle="bold"/>
