--- a/app/src/main/res/layout/activity_project_detail_signup.xml
+++ b/app/src/main/res/layout/activity_project_detail_signup.xml
@@ -55,17 +55,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:text="Đơn vị tổ chức:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/txt_link_user_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
@@ -76,12 +79,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="0">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:text="Thời gian:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
@@ -98,12 +103,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:text="Địa điểm:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
@@ -120,12 +127,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:text="Kinh phí dự kiến:"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
@@ -142,12 +151,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="0">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:text="Kinh phí\nđược tài trợ"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
@@ -162,6 +173,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15sp"
                     android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
                     android:text="500000000 đồng"
                     android:textSize="18sp"/>
 
@@ -170,6 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15sp"
                     android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
                     android:text="Link sao kê"
                     android:textSize="18sp"/>
             </LinearLayout>
