--- a/app/src/main/res/layout/activity_create_project.xml
+++ b/app/src/main/res/layout/activity_create_project.xml
@@ -202,33 +202,50 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/editDayStartProject"
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/txtDayStartProject"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
+                        android:inputType="date"
+                        android:layout_marginTop="@dimen/margin_medium"
                         android:hint="Nhập ngày bắt đầu"
-                        android:inputType="date"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:textSize="20sp"
+                        android:layout_weight="1"/>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/editDayEndProject"
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
+                        app:srcCompat="@drawable/date"
+                        android:id="@+id/btnStartDate" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/txtDayEndProject"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
                         android:hint="Nhập ngày kết thúc"
-                        android:inputType="date"/>
-                </android.support.design.widget.TextInputLayout>
+                        android:layout_marginTop="@dimen/margin_medium"
+                        android:textSize="20sp"
+                        android:ems="10"
+                        android:layout_weight="1"/>
+
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/date"
+                        android:id="@+id/btnEndDate" />
+                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
