--- a/app/src/main/res/layout/activity_edit_red_point.xml
+++ b/app/src/main/res/layout/activity_edit_red_point.xml
@@ -2,6 +2,7 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.vuduc.apptuthien.EditRedPointActivity"
     android:layout_width="match_parent"
@@ -71,24 +72,32 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:text="Thời gian: "
                 android:textSize="@dimen/txt_large"
                 android:textStyle="bold"/>
 
-            <android.support.design.widget.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/editDayStartProject"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/txtDayStartProject"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:inputType="date"
+                    android:layout_marginTop="@dimen/margin_medium"
                     android:hint="Nhập ngày xảy ra"
-                    android:ems="10"
+                    android:textSize="20sp"
                     android:layout_weight="1"/>
-            </android.support.design.widget.TextInputLayout>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/date"
+                    android:id="@+id/btnStartDate" />
+            </LinearLayout>
 
         </LinearLayout>
 
